# predictive-shift

./: .gitignore  02_preprocessed_data_assessment.ipynb  03_confounded_datasets_exploration.ipynb  04_analysis_results_summary.ipynb  05_full_pipeline_data_quality_report.ipynb  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  README_OSRCT.md  generate_paper_components.py  osrct_continuous.py  osrct_demo.py  osrct_sample_anchoring1.csv  osrct_sample_gainloss.csv  package_benchmark.py  pyproject.toml  requirements-grounding.txt  requirements.txt  run_phase5_analysis.py
causal_grounding/: __init__.py  ci_tests.py  ci_tests_l1.py  ci_tests_loco.py  comparison.py  confounded_instrument_dgp.py  covariate_scoring.py  discretize.py  estimator.py  evaluation.py  lp_solver.py  lp_solver_extended.py  marginal_effects.py  predictors.py  ricardo_adapter.py  sensitivity.py  simulator.py  train_target_split.py  transfer.py  visualization.py
docs/: HOW_TO_RUN_EXPERIMENTS.md  index.md  installation.md  quickstart.md  tutorials.md
experiments/: compare_lp_methods.py  compare_to_baselines.py  ehs_instrument_validity_experiment.py  exp1_proof_of_concept.py  exp2_coverage_calibration.py  exp3_instrument_sweep.py  exp4_confounding_sweep.py  exp7_real_data.py  experiment_ci_engine_comparison.py  experiment_multi_instrument.py  generate_cmi_report.py  integration_test.py  loco_vs_cmi.py  multi_instrument.py  run_grounding.py  run_grounding_experiment.py  run_sensitivity_sweep.py  validate_cate_coverage.py
experiments_synthetic/: README.md  __init__.py  integration_test.py  run_experiment.py  synthetic_data.py  validate_cate.py
(+87 files in other folders)
