[project]
name = "predictive-shift"
version = "0.1.0"
description = "Causal grounding experiments on OSRCT benchmark data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    # Core scientific computing
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "scipy>=1.10.0,<2.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    # Statistics
    "statsmodels>=0.14.0",
    "pingouin>=0.5.3",
    # Optimization (LP solver)
    "cvxpy>=1.4.0",
    # Visualization
    "matplotlib>=3.5.0,<4.0.0",
    "seaborn>=0.12.0,<1.0.0",
    # Data loading
    "pyreadstat>=1.2.0,<2.0.0",
    "ipykernel>=6.31.0",
]

[project.optional-dependencies]
causal = [
    # Causal ML methods (for Causal Forest)
    "econml>=0.15.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=6.0.0",
    "ipykernel>=6.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
]
all = [
    "predictive-shift[causal,notebooks,dev]",
]

[project.scripts]
run-grounding = "experiments.run_grounding_experiment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["causal_grounding"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
